@@ -15,6 +15,11 @@ RELEASE 0.15 - XXX
   - Fix handling of library prefixes when the subdirectory matches
     the prefix.
 
+  From Charles Crain:
+
+  - Use '.lnk' as the suffix on the temporary file for linking long
+    command lines (necessary for the Phar Lap linkloc linker).
+
   From Steven Knight:
 
   - SCons now enforces (with an error) that construction variables
